--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             }
         },
         "interactivity": {
-            "detect_on": "canvas",
+            "detect_on": "window",
             "events": {
                 "onhover": { 
                     "enable": true, 
-                    "mode": "bubble"  // More visible effect
+                    "mode": "repulse"  // More visible effect
                 },
                 "onclick": { 
                     "enable": true, 
