--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 				<nav id="nav">
 					<ul class="links">
 					  <li class="active">
-						<a href="index.html"
+						<a href="index.html" 
 						   style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
 						   onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
 						   onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';">
@@ -178,7 +178,7 @@
 					</ul>
 					<ul class="icons">
 					  <li>
-						<a href="https://www.linkedin.com/in/srivak/"
+						<a href="https://www.linkedin.com/in/srivak/" target="_blank"
 						   class="icon brands alt fa-linkedin"
 						   style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
 						   onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
@@ -187,7 +187,7 @@
 						</a>
 					  </li>
 					  <li>
-						<a href="https://github.com/sri-dsa"
+						<a href="https://github.com/sri-dsa" target="_blank"
 						   class="icon brands alt fa-github"
 						   style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
 						   onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
@@ -496,37 +496,37 @@
 							<div class="text-container">
 								<h3 class="animated-text">Interested in my Analytics Projects Portfolio?</h3>
 								<p class="badges-container">
-								  <a href="https://github.com/sri-dsa/DataAnalyticsProjects" target="_blank">
+								  <a href="https://sri-dsa.github.io/DA/" target="_blank">
 									<img src="https://img.shields.io/badge/Power%20BI-%23F2C811.svg?style=for-the-badge&logo=powerbi&logoColor=black" height="30" 
 										 style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;" 
 										 onmouseover="this.style.transform='scale(1.2)'; this.style.opacity='0.8';" 
 										 onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';"/>
 								  </a>
-								  <a href="https://github.com/sri-dsa/DataAnalyticsProjects" target="_blank">
+								  <a href="https://sri-dsa.github.io/DA/" target="_blank">
 									<img src="https://img.shields.io/badge/Microsoft%20SQL%20Server-%23CC2927.svg?style=for-the-badge&logo=microsoft%20sql%20server&logoColor=white" height="30" 
 										 style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;" 
 										 onmouseover="this.style.transform='scale(1.2)'; this.style.opacity='0.8';" 
 										 onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';"/>
 								  </a>
-								  <a href="https://github.com/sri-dsa/DataAnalyticsProjects" target="_blank">
+								  <a href="https://sri-dsa.github.io/DA/" target="_blank">
 									<img src="https://img.shields.io/badge/Azure-%230072C6.svg?style=for-the-badge&logo=microsoftazure&logoColor=white" height="30" 
 										 style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;" 
 										 onmouseover="this.style.transform='scale(1.2)'; this.style.opacity='0.8';" 
 										 onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';"/>
 								  </a>
-								  <a href="https://github.com/sri-dsa/DataAnalyticsProjects" target="_blank">
+								  <a href="https://sri-dsa.github.io/DA/" target="_blank">
 									<img src="https://img.shields.io/badge/Tableau-%23E97627.svg?style=for-the-badge&logo=tableau&logoColor=white" height="30" 
 										 style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;" 
 										 onmouseover="this.style.transform='scale(1.2)'; this.style.opacity='0.8';" 
 										 onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';"/>
 								  </a>
-								  <a href="https://github.com/sri-dsa/DataAnalyticsProjects" target="_blank">
+								  <a href="https://sri-dsa.github.io/DA/" target="_blank">
 									<img src="https://img.shields.io/badge/Microsoft%20Excel-%2300A651.svg?style=for-the-badge&logo=microsoft-excel&logoColor=white" height="30" 
 										 style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;" 
 										 onmouseover="this.style.transform='scale(1.2)'; this.style.opacity='0.8';" 
 										 onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';"/>
 								  </a>
-								  <a href="https://github.com/sri-dsa/DataAnalyticsProjects" target="_blank">
+								  <a href="https://sri-dsa.github.io/DA/" target="_blank">
 									<img src="https://img.shields.io/badge/Docker-2496ED?style=flat-square&logo=docker&logoColor=white&labelColor=grey" height="30" 
 										 style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;" 
 										 onmouseover="this.style.transform='scale(1.2)'; this.style.opacity='0.8';" 
@@ -585,7 +585,7 @@
             <h3>Social</h3>
             <ul class="icons alt">
                 <li>
-					<a href="https://www.linkedin.com/in/srivak/" class="icon brands alt fa-linkedin"
+					<a href="https://www.linkedin.com/in/srivak/" class="icon brands alt fa-linkedin" target="_blank"
 					   style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
 					   onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
 					   onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';">
@@ -593,7 +593,7 @@
 					</a>
 				  </li>
 				  <li>
-					<a href="https://github.com/sri-dsa" class="icon brands alt fa-github"
+					<a href="https://github.com/sri-dsa" class="icon brands alt fa-github" target="_blank"
 					   style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
 					   onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
 					   onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';">
@@ -601,7 +601,7 @@
 					</a>
 				  </li>
 				  <li>
-					<a href="mailto:sk.data@icloud.com" class="icon solid alt fa-envelope"
+					<a href="mailto:sk.data@icloud.com" class="icon solid alt fa-envelope" 
 					   style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
 					   onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
 					   onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';">
@@ -609,7 +609,7 @@
 					</a>
 				  </li>
 				  <li>
-					<a href="https://www.hackerrank.com/profile/sk_data" class="icon brands alt fa-hackerrank"
+					<a href="https://www.hackerrank.com/profile/sk_data" class="icon brands alt fa-hackerrank" target="_blank"
 					   style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
 					   onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
 					   onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';">
@@ -626,7 +626,7 @@
 <div id="copyright" style="color: #ffffff;">
     <ul>
         <li>© <span style="animation: blink 1s infinite;">👀</span> This site is under heavy surveillance because I'm too broke to copyright.</li>
-        <li>Designer/Editor: <a href="https://www.linkedin.com/in/srivak/"><span class="shaking-emoji">🎨</span> Srivathsan Karthikeyan</a></li>
+        <li>Designer/Editor: <a href="https://www.linkedin.com/in/srivak/" target="_blank"><span class="shaking-emoji">🎨</span> Srivathsan Karthikeyan</a></li>
     </ul>
     
     <div class="badges">
