--- a/index.html
+++ b/index.html
@@ -180,12 +180,13 @@
 					<ul class="icons">
 						<li>
 							<a href="https://sri-dsa.github.io/sri-dsa/" target="_blank"
-						   class="fa-solid fa-house" style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
-						   onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
-						   onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';">
+       style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
+       onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
+       onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';">
+								<i class="fa-solid fa-house"></i>
 								<span class="label"> Home </span>
+							</a>
 						</li>
-						
 						<li>
 						<a href="https://www.linkedin.com/in/srivak/" target="_blank"
 						   class="icon brands alt fa-linkedin"
