--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
 					  </li>
 					</ul>
 					<ul class="icons">
-						<li><span class="label"> Home </span>
+						<li>
 							<a href="https://sri-dsa.github.io/sri-dsa/" target="_blank"
        style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
        onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
-       onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';">
+       onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';"><span class="label"> Home </span>
 								<i class="fa-solid fa-house"></i>
 							</a>
 						</li>
