--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
 					</ul>
 					<ul class="icons">
 						<li>
-							<a href="https://sri-dsa.github.io/sri-dsa/" target="_blank"
+						<a href="https://sri-dsa.github.io/sri-dsa/" target="_blank"
        style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
        onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
-       onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';"><span class="label"> Home </span>
-								<i class="fa-solid fa-house"></i>
-							</a>
+       onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';">
+       <i class="fa-solid fa-desktop"></i>
+</a>
 						</li>
 						<li>
 						<a href="https://www.linkedin.com/in/srivak/" target="_blank"
