--- a/index.html
+++ b/index.html
@@ -603,15 +603,14 @@
 					  <span class="label">LinkedIn</span>
 					</a>
 				  </li>
-				  <li>
-					  <a href="https://sri-dsa.github.io/sri-dsa/" target="_blank"
-       style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
-       onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
-       onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';">
-       <span class="label"> Home </span>
-       <i class="fa-solid fa-desktop"></i>
-</a>
-				  </li>
+		    <li>
+  <a href="https://sri-dsa.github.io/sri-dsa/" class="icon solid alt fa-desktop" target="_blank"
+     style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
+     onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
+     onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';">
+  </a>
+</li>
+
 		    <li>
 			    <a href="https://github.com/sri-dsa" class="icon brands alt fa-github" target="_blank"
 					   style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
