--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Artificial Intelligence Projects Portfolio<br /></h1>
-						<h2 style="opacity: 0.5;">Author : Srivathsan Karthikeyan<br /></h2>
-						<h2 style="opacity: 0.5;">Includes Machine Learning, Deep Learning, Computer Vision, NLP<br /></h2>
+						<h2 style="background: rgba(0, 0, 0, 0.5); color: inherit;">Author : Srivathsan Karthikeyan<br /></h2>
+						<h2 style="background: rgba(0, 0, 0, 0.5); color: inherit;">Includes Machine Learning, Deep Learning, Computer Vision, NLP<br /></h2>
 							<p align="center">
 								<a href="#nav" class = "scrolly">
 									<img src="https://img.shields.io/badge/Python Libraries Used : -FFD43B?style=flat-square&logo=python&logoColor=blue&labelColor=grey" height="30" 
