--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
        style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
        onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
        onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';">
-       <i class="fa-solid fa-desktop"></i>
+       <i class="icon solid alt fa-desktop"></i>
 </a>
 						</li>
 						<li>
