--- a/index.html
+++ b/index.html
@@ -645,8 +645,11 @@
         <li>© <span style="animation: blink 1s infinite;">👀</span> This site is under heavy surveillance because I'm too broke to copyright.</li>
         <li>Designer/Editor: <a href="https://www.linkedin.com/in/srivak/" target="_blank"><span class="shaking-emoji">🎨</span> Srivathsan Karthikeyan</a></li>
     </ul>
-    
-    <div class="badges">
+</footer>
+
+				<!-- Copyright 
+								
+								<div class="badges">
 		<span class="badge" style="background: rgba(255, 255, 255, 0.1); color: #fff; padding: 5px 10px; border-radius: 12px; font-size: 0.9em; border: 1px solid rgba(255, 255, 255, 0.3); transition: transform 0.2s ease-in-out, background 0.3s ease-in-out; position: relative; cursor: pointer;" 
 		onmouseover="this.innerText=' No Pain ↔️ No Glory!🚀'" 
 		onmouseout="this.innerText='🔥 Runs on Perseverance'">🔥 Runs on Perseverance</span>
@@ -654,10 +657,7 @@
 		<span class="badge" style="background: rgba(255, 255, 255, 0.1); color: #fff; padding: 5px 10px; border-radius: 12px; font-size: 0.9em; border: 1px solid rgba(255, 255, 255, 0.3); transition: transform 0.2s ease-in-out, background 0.3s ease-in-out; position: relative; cursor: pointer;" 
 		onmouseover="this.innerText='Just Hire Me'" 
 		onmouseout="this.innerText='💰 Accepting Donations'">💰 Accepting Donations</span>
-	</div>
-</footer>
-
-				<!-- Copyright -->
+	</div>-->
 
 	
 
