--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 									onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';"/>
 								</a>
 				 <ul class="actions">
-					<li>
+					<li style="background: rgba(0, 0, 0, 1); color: inherit;">
 						<a href="#nav" class="button icon solid solo fa-arrow-down scrolly"
 						   style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
 						   onmouseover="this.style.transform='scale(1.8)'; this.style.opacity='0.8';"
@@ -175,7 +175,7 @@
 				
 					</div>
 				<!-- Header -->
-					<header id="header">
+					<header id="header" style="background: rgba(0, 0, 0, 1); color: inherit;">
 						<a href="#nav" class="logo"><i class="fa fa-arrow-down "></i>Scroll More <i class="fa fa-arrow-down"></i> </a>
 					</header>
 
