--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 						</a>
 					  </li>
 					</ul>
-					<ul class="icons">
+					<ul class="icons" style="background: rgba(0, 0, 0, 1); color: inherit;">
 						<li>
 						<a href="https://sri-dsa.github.io/sri-dsa/" target="_blank"
        style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
