--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
 
 				<!-- Nav -->
 				<nav id="nav">
-					<ul class="links">
+					<ul class="links" style="background: rgba(0, 0, 0, 1); color: inherit;">
 					  <li class="active">
 						<a href="index.html" 
 						   style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
 						   onmouseover="this.style.transform='scale(1.9)'; this.style.opacity='0.8';"
-						   onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';">
+						   onmouseout="this.style.transform='scale(1)'; this.style.opacity='1';" >
 						  Projects
 						</a>
 					  </li>
