--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 		
 				<!-- Intro -->
 					<div id="intro">
-						<h1 style="background: rgba(0, 0, 0, 1); color: inherit;">Artificial Intelligence Projects Portfolio<br /></h1>
-						<h2 style="background: rgba(0, 0, 0, 1); color: inherit;">Author : Srivathsan Karthikeyan<br /></h2>
-						<h2 style="background: rgba(0, 0, 0, 1); color: inherit;">Includes Machine Learning, Deep Learning, Computer Vision, NLP<br /></h2>
+						<h1 style="background: rgba(0, 0, 0, 0.8); color: inherit;">Artificial Intelligence Projects Portfolio<br /></h1>
+						<h2 style="background: rgba(0, 0, 0, 0.8); color: inherit;">Author : Srivathsan Karthikeyan<br /></h2>
+						<h2 style="background: rgba(0, 0, 0, 0.8); color: inherit;">Includes Machine Learning, Deep Learning, Computer Vision, NLP<br /></h2>
 							<p align="center">
 								<a href="#nav" class = "scrolly">
 									<img src="https://img.shields.io/badge/Python Libraries Used : -FFD43B?style=flat-square&logo=python&logoColor=blue&labelColor=grey" height="30" 
@@ -180,8 +180,8 @@
 					</header>
 
 				<!-- Nav -->
-				<nav id="nav">
-					<ul class="links" style="background: rgba(0, 0, 0, 1); color: inherit;">
+				<nav id="nav" style="background: rgba(0, 0, 0, 0.8); color: inherit;">
+					<ul class="links" style="background: rgba(0, 0, 0, 0.8); color: inherit;">
 					  <li class="active">
 						<a href="index.html" 
 						   style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
@@ -191,7 +191,7 @@
 						</a>
 					  </li>
 					</ul>
-					<ul class="icons" style="background: rgba(0, 0, 0, 1); color: inherit;">
+					<ul class="icons" style="background: rgba(0, 0, 0, 0.8); color: inherit;">
 						<li>
 						<a href="https://sri-dsa.github.io/sri-dsa/" target="_blank"
        style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
