--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                 "anim": { "enable": false, "speed": 1, "opacity_min": 0.1, "sync": false } // Updated animation
             },
             "size": {
-                "value": 12, // Updated size value
+                "value": 10, // Updated size value
                 "random": true,
                 "anim": { "enable": false, "speed": 40, "size_min": 0.1, "sync": false } // Updated animation
             },
             "line_linked": {
                 "enable": true,
-                "distance": 0, // Updated from 150
-                "color": "#ffffff", // Updated color
+                "distance": 150, // Updated from 150
+                "color": "#000fff", // Updated color
                 "opacity": 0.4, // Updated opacity
                 "width": 1
             },
@@ -114,7 +114,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1 style="background: rgba(0, 0, 0, 0.8); color: inherit;">Artificial Intelligence Projects Portfolio<br /></h1>
-						<h2 style="background: rgba(0, 0, 0, 0.8); color: inherit;">Author : Srivathsan Karthikeyan<br /></h2>
+						<h1 style="background: rgba(0, 0, 0, 0.8); color: inherit;">Author : Srivathsan Karthikeyan<br /></h1>
 						<h2 style="background: rgba(0, 0, 0, 0.8); color: inherit;">Includes Machine Learning, Deep Learning, Computer Vision, NLP<br /></h2>
 							<p align="center">
 								<a href="#nav" class = "scrolly">
