--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 "value": 600,  // Updated from 300
                 "density": { "enable": true, "value_area": 400.8530152163807 } // Updated value
             },
-            "color": { "value": "#d2ff00" }, // Updated color
+            "color": { "value": "#00ff1e" }, // Updated color
             "shape": {
                 "type": "circle",
                 "stroke": { "width": 0, "color": "#000000" }, // Updated width
@@ -46,7 +46,7 @@
             },
             "line_linked": {
                 "enable": true,
-                "distance": 150, // Updated from 150
+                "distance": 0, // Updated from 150
                 "color": "#000fff", // Updated color
                 "opacity": 0.4, // Updated opacity
                 "width": 1
