--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             },
             "color": { "value": "#00ff1e" }, // Updated color
             "shape": {
-                "type": "circle",
-                "stroke": { "width": 0, "color": "#000000" }, // Updated width
+                "type": "star",
+                "stroke": { "width": 0, "color": "#d2ff00" }, // Updated width
                 "polygon": { "nb_sides": 5 },
                 "image": { // Added image properties
                     "src": "img/github.svg",
