--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 "value": 600,  // Updated from 300
                 "density": { "enable": true, "value_area": 400.8530152163807 } // Updated value
             },
-            "color": { "value": "#00ff1e" }, // Updated color
+            "color": { "value": "#d2ff00" }, // Updated color
             "shape": {
                 "type": "star",
                 "stroke": { "width": 0, "color": "#d2ff00" }, // Updated width
