--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 					</header>
 
 				<!-- Nav -->
-				<nav id="nav" style="background: rgba(0, 0, 0, 0.7); color: inherit;">
-					<ul>
+				<nav id="nav" style="background: rgba(0, 0, 0, 0.8); color: inherit;">
+					<ul class="links" style="background: rgba(0, 0, 0, 0.8); color: inherit;">
 					  <li class="active">
 						<a href="index.html" 
 						   style="display: inline-block; transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;"
