--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         "particles": {
             "number": { 
                 "value": 600,  // Updated from 300
-                "density": { "enable": true, "value_area": 400.8530152163807 } // Updated value
+                "density": { "enable": true, "value_area": 1500 } // Updated value
             },
             "color": { "value": "#d2ff00" }, // Updated color
             "shape": {
