--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/anime.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -16,9 +17,52 @@
 
 				<!-- Intro -->
 				<div id="intro">
-					<h1 >Artificial Intelligence Projects Portfolio<br /></h1>
-					<h2 >Author : Srivathsan Karthikeyan<br /></h2>
-					<h2 >Includes Machine Learning, Deep Learning, Computer Vision, NLP<br /></h2>
+					<h2 style="
+    /* Layout & Centering */
+    display: table;
+    margin: 1em auto;
+    padding: 0.6em 2em;
+    text-align: center;
+
+    /* Royal Background & Text Color (Background part moved to CSS) */
+    color: #181005;
+
+    /* Border & Shape */
+    border: 1px solid #b8860b;
+    border-radius: 4px;
+    clip-path: polygon(10px 0%, calc(100% - 10px) 0%, 100% 10px, 100% calc(100% - 10px), calc(100% - 10px) 100%, 10px 100%, 0% calc(100% - 10px), 0% 10px);
+
+    /* Depth & Text Styling */
+    box-shadow: 0 2px 5px rgba(0,0,0,0.15), inset 0 1px 2px rgba(255, 235, 190, 0.4);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-family: 'Montserrat', Arial, sans-serif;
+    font-weight: bold;
+">Artificial Intelligence Projects Portfolio</h2>
+<h2 >Includes Machine Learning, Deep Learning, Computer Vision, NLP<br /></h2>
+					<h3 style="
+        /* Layout & Centering */
+        display: table;
+        margin: 1.2em auto; /* Slightly more margin for a prominent feel */
+        padding: 0.7em 2.2em 1.2em 2.2em; /* Adjusted padding for banner shape, esp. bottom */
+        text-align: center;
+
+        /* Royal Background & Text Color - Rich Crimson & Pale Gold */
+        background: linear-gradient(135deg, #800000, #A52A2A, #C21E56, #A52A2A, #800000); /* Maroon, Brown, Rose Red gradient */
+        color: #FFF8DC; /* Cornsilk - a pale, rich gold */
+
+        /* Border & Shape - Royal Banner/Edict Shape */
+        border: 1px solid #500000; /* Very dark red border for sharp definition */
+        clip-path: polygon(0 0, 100% 0, 100% calc(100% - 20px), 50% 100%, 0 calc(100% - 20px)); /* Pointed banner bottom */
+        border-radius: 3px 3px 0 0; /* Slight rounding on top corners if desired, works with clip-path */
+        
+        /* Depth & Text Styling */
+        box-shadow: 0 4px 8px rgba(0,0,0,0.25), inset 0 1px 3px rgba(255,200,200,0.3); /* Deeper shadow, subtle crimson inner glow */
+        text-transform: uppercase; /* Maintaining regal formality */
+        letter-spacing: 1.1px;
+        font-family: 'Cinzel Decorative', serif; /* More ornate serif for H3 */
+        font-weight: 700; /* Bold for importance */
+    "><a href="https://www.linkedin.com/in/srivak/" target="_blank">Author : Srivathsan Karthikeyan</a><br /></h3>
 						<p align="center">
 							<a href="#nav" class = "scrolly">
 								<img src="https://img.shields.io/badge/Python Libraries Used : -FFD43B?style=flat-square&logo=python&logoColor=blue&labelColor=grey" height="30" 
