--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>Srivathsan Karthikeyan's Projects Portfolio</title>
+		<link rel="icon" id="favicon" href="" type="image/png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -445,6 +446,21 @@
 			</div>
 
 		<!-- Scripts -->
+		<script>
+    fetch('https://api.github.com/users/sri-dsa')
+        .then(response => response.json())
+        .then(data => {
+            // Set profile picture
+            document.getElementById('profile-pic').src = data.avatar_url;
+            // Set favicon with smaller size and cache-busting
+            document.getElementById('favicon').href = data.avatar_url + '?s=32&v=' + new Date().getTime();
+            // Set profile name
+            document.getElementById('profile-name').textContent = data.name || "Srivathsan Karthikeyan";
+            // Set location
+            document.getElementById('location').textContent = data.location || "Not available";
+        })
+        .catch(error => console.error('GitHub fetch error:', error));
+</script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
