--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Srivathsan Karthikeyan's Projects Portfolio</title>
+		<title>SK's Projects Portfolio</title>
 		<link rel="icon" id="favicon" href="" type="image/png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
